apps/faces/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: faces
  annotations:
    linkerd.io/inject: enabled
spec: {}
