apps/faces/color-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: color-route
  namespace: faces
spec:
  parentRefs:
    - group: ""
      name: color
      kind: Service
      port: 80
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: color
      port: 80
      weight: 100
